<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="next">다음</string>
    <string name="save">저장하기</string>
    <string name="make_news">뉴스 만들기</string>

    <string name="login_kakao">카카오로 시작하기</string>
    <string name="login_google">구글로 시작하기</string>

    <string name="term_desc">일거수일투족을 사용하시려면,\n이용약관 및 개인정보처리방침에 동의가 필요합니다.</string>
    <string name="term_sub_title">필수 항목 *</string>
    <string name="term_privacy_desc">개인 정보 수집 및 이용에 동의합니다.</string>
    <string name="term_all">모든 약관에 동의 합니다.</string>
    <string name="term_start_btn">시작하기</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">설정</string>
    <string name="alert_setting">알림 설정</string>
    <string name="about_service">서비스 이용 약관</string>
    <string name="about_privacy">개인정보처리방침</string>
    <string name="delete_account">탈퇴하기</string>
    <string name="logo">logo</string>
    <string name="my_move_log">나의 일거수일투족 현황</string>
    <string name="select_date"><![CDATA[날짜 선택]]></string>
    <string name="recent_news">뉴스 생성 현황</string>
    <string name="complete">complete</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="record_until_today">오늘까지의 기록 현황</string>
    <string name="ate_it">ate it</string>
    <string name="did_it">did it</string>
    <string name="went_it">went_it</string>
    <string name="record_news">+  기록하기</string>
    <string name="go_back">go back</string>
    <string name="right_arrow">right arrow</string>
    <string name="record_of_this_month">이 달의 기록 수</string>
    <string name="prev_month">prev month</string>
    <string name="next_month">next month</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>

    <string name="record_toolbar_title">기록</string>
    <string name="record_type_title">나는 오늘</string>
    <string name="record_word_title">명사 작성</string>
    <string name="record_word_hint">20자 글자 이내의 단어로 작성해 주세요.</string>

    <string name="record_last_photo_title">사진 등록하기</string>
    <string name="record_last_photo_select">사진 선택 ></string>

    <string name="record_type_0">했어요</string>
    <string name="record_type_1">갔어요</string>
    <string name="record_type_2">먹었어요</string>

    <string name="time_hour">HOURS</string>
    <string name="time_minute">MINUTES</string>
    <string name="time_second">SECONDS</string>
    <string name="tv_calendar_date">2024년 10월 28일 (월)</string>
    <string name="dot">·</string>
    <string name="kor_did_it">했어요</string>
    <string name="tv_if_no_record">기록이 없어요.\n다른 날짜를 선택해주세요!</string>

    <!-- News Create -->
    <string name="create_top_title">뉴스 생성</string>
    <string name="create_1_title">뉴스로 만들고 싶은 데이터를 선택해주세요.</string>
    <string name="create_1_sub_title">추천 기록</string>
    <string name="create_1_ask_other_keyword">원하는 데이터가 없으신가요?</string>
    <string name="create_1_do_other_keyword">직접 검색하기</string>
    <string name="create_2_title">강조할 헤드라인을 선택해주세요.</string>
    <string name="create_2_type_1">첫 도전</string>
    <string name="create_2_type_2">오랜만에 다시</string>
    <string name="create_2_type_3">꾸준히 이어온\n기록</string>
    <string name="create_2_type_4">끊어낸 습관</string>
    <string name="create_3_title">뉴스로 만들고 싶은 사진을 선택해주세요.</string>
    <string name="create_3_sub_title">업로드했던 사진들</string>
    <string name="create_3_ask_other_img">다른 사진을 선택하시겠어요?</string>
    <string name="create_3_do_other_img">새로운 사진 등록하기</string>
    <string name="create_4_title">마음에 드는 헤드라인을 선택해주세요.</string>
    <string name="create_4_headline_hint">직접 헤드라인을 작성해보세요.</string>

    <!-- news result -->
    <string name="news_result_step_1">오늘의 특별한 뉴스를 준비하고 있어요.</string>
    <string name="news_result_step_2">뉴스를 인쇄하고 있어요.</string>
    <string name="news_result_step_3">기사님이 신문을 배달하고 있어요.</string>
    <string name="news_result_sub_title">뉴스를 확인해보세요!</string>
    <string name="news_result_save_image">이미지 저장하기</string>
    <string name="news_result_share">인스타그램 공유하기</string>
</resources>