<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginTop="16dp"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/tv_news_create_desc"
        style="@style/ibm_plex_h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_2_title"
        android:textColor="@color/gray_1c"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_headline_type_1"
        style="@style/ibm_plex_t2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_recommend_keyword"
        android:gravity="center"
        android:text="@string/create_2_type_1"
        android:textColor="@color/gray_1c"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/tv_headline_type_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_news_create_desc" />

    <TextView
        android:id="@+id/tv_headline_type_2"
        style="@style/ibm_plex_t2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_recommend_keyword"
        android:gravity="center"
        android:text="@string/create_2_type_2"
        android:textColor="@color/gray_1c"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="@id/tv_headline_type_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_headline_type_1"
        app:layout_constraintTop_toTopOf="@id/tv_headline_type_1" />

    <TextView
        android:id="@+id/tv_headline_type_3"
        style="@style/ibm_plex_t2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_recommend_keyword"
        android:gravity="center"
        android:text="@string/create_2_type_3"
        android:textColor="@color/gray_1c"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_headline_type_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_headline_type_1" />

    <TextView
        android:id="@+id/tv_headline_type_4"
        style="@style/ibm_plex_t2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_recommend_keyword"
        android:gravity="center"
        android:text="@string/create_2_type_4"
        android:textColor="@color/gray_1c"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="@id/tv_headline_type_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_headline_type_3"
        app:layout_constraintTop_toTopOf="@id/tv_headline_type_3" />
</androidx.constraintlayout.widget.ConstraintLayout>