<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f3"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.calendar.CalendarFragment">

    <Toolbar
        android:id="@+id/frag_calendar_toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_left_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="true"
            android:background="@drawable/ic_left_arrow"
            android:contentDescription="@string/go_back" />
        
        <TextView
            android:id="@+id/tv_select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_date"
            android:textSize="15sp"
            android:textColor="@color/gray_1c"
            style="@style/ibm_plex_h1" />
        
    </Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_e1"
        app:layout_constraintTop_toBottomOf="@id/frag_calendar_toolbar"/>

    <TextView
        android:id="@+id/tv_record_of_this_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_of_this_month"
        android:textSize="15sp"
        android:textColor="@color/gray_1c"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_calendar_toolbar"
        style="@style/ibm_plex_h2" />

    <View
        android:id="@+id/bg_calendar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="328:338"
        android:background="@drawable/bg_calendar"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_record_of_this_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <LinearLayout
        android:id="@+id/ll_month"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/bg_calendar"
        app:layout_constraintStart_toStartOf="@id/bg_calendar"
        app:layout_constraintEnd_toEndOf="@id/bg_calendar">

        <ImageView
            android:id="@+id/iv_prev_month"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="true"
            android:contentDescription="@string/prev_month"
            android:src="@drawable/ic_vector_left" />
        <TextView
            android:id="@+id/tv_current_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:textSize="15sp"
            android:textColor="@color/gray_4d"
            style="@style/ibm_plex_l1"
            tools:text="2024년 10월" />
        <ImageView
            android:id="@+id/iv_next_month"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="true"
            android:contentDescription="@string/next_month"
            android:src="@drawable/ic_vector_right" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_calendar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        tools:listitem="@layout/item_month"
        app:layout_constraintTop_toBottomOf="@id/ll_month"
        app:layout_constraintStart_toStartOf="@id/bg_calendar"
        app:layout_constraintEnd_toEndOf="@id/bg_calendar"
        app:layout_constraintBottom_toBottomOf="@id/bg_calendar"/>

</androidx.constraintlayout.widget.ConstraintLayout>