<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_news_create_desc"
        style="@style/ibm_plex_h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/create_3_title"
        android:textColor="@color/gray_1c"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sub_title"
        style="@style/ibm_plex_l5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_3_sub_title"
        android:textColor="@color/gray_4d"
        app:layout_constraintTop_toBottomOf="@id/tv_news_create_desc" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recommend_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:paddingVertical="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/tv_direct_title"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
        tools:itemCount="0"
        tools:listitem="@layout/item_upload_image" />

    <TextView
        android:id="@+id/tv_empty"
        style="@style/ibm_plex_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="해당 단어로 업로드한 사진이 없어요"
        android:textColor="@color/gray_4d"
        app:layout_constraintTop_toTopOf="@id/rv_recommend_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_direct_title"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_direct_title"
        style="@style/ibm_plex_l5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_3_ask_other_img"
        android:textColor="@color/gray_4d"
        app:layout_constraintTop_toBottomOf="@id/rv_recommend_data" />

    <TextView
        android:id="@+id/tv_selected_data"
        style="@style/ibm_plex_l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_direct_search_bg"
        android:text="@string/create_3_do_other_img"
        android:textColor="@color/gray_7f"
        app:layout_constraintTop_toBottomOf="@id/tv_direct_title" />

    <ImageView
        android:id="@+id/iv_selected_data"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/tv_selected_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_selected_data" />
</androidx.constraintlayout.widget.ConstraintLayout>