<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.setting.SettingFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_left_arrow"
            android:contentDescription="@null" />

        <TextView
            style="@style/ibm_plex_h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting"
            android:textColor="@color/gray_1c"
            android:textSize="15sp" />
    </Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_e1"
        app:layout_constraintBottom_toBottomOf="@+id/setting_toolbar" />

    <TextView
        android:id="@+id/tv_alert_setting"
        style="@style/ibm_plex_h2"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/alert_setting"
        android:textColor="@color/gray_4d"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_toolbar" />

    <TextView
        android:id="@+id/tv_about_service"
        style="@style/ibm_plex_h2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/about_service"
        android:textColor="@color/gray_4d"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_about_service"
        app:layout_constraintTop_toBottomOf="@id/tv_alert_setting" />

    <ImageButton
        android:id="@+id/btn_about_service"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginVertical="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_right_arrow"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_alert_setting" />

    <TextView
        android:id="@+id/tv_about_privacy"
        style="@style/ibm_plex_h2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/about_privacy"
        android:textColor="@color/gray_4d"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_about_privacy"
        app:layout_constraintTop_toBottomOf="@id/tv_about_service" />

    <ImageButton
        android:id="@+id/btn_about_privacy"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginVertical="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_right_arrow"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_about_service" />

    <TextView
        android:id="@+id/tv_delete_account"
        style="@style/ibm_plex_h2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/delete_account"
        android:textColor="@color/red"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_delete_account"
        app:layout_constraintTop_toBottomOf="@id/tv_about_privacy" />

    <ImageButton
        android:id="@+id/btn_delete_account"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginVertical="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_right_arrow"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_about_privacy" />

</androidx.constraintlayout.widget.ConstraintLayout>