<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image_400_780">

    <ImageView
        android:id="@+id/iv_term_logo"
        android:layout_width="118dp"
        android:layout_height="118dp"

        android:layout_marginHorizontal="80dp"
        android:contentDescription="@null"
        android:src="@drawable/logo_symbol"
        app:layout_constraintBottom_toTopOf="@id/tv_term_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_term_desc"
        style="@style/ibm_plex_l5"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:text="@string/term_desc"
        android:textColor="@color/gray_4d"
        app:layout_constraintBottom_toTopOf="@id/tv_term_sub_title"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_term_logo" />

    <TextView
        android:id="@+id/tv_term_sub_title"
        style="@style/ibm_plex_h2"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="16dp"
        android:text="@string/term_sub_title"
        android:textColor="@color/gray_1c"
        app:layout_constraintBottom_toTopOf="@id/ll_cb_privacy"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_term_desc" />

    <LinearLayout
        android:id="@+id/ll_cb_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:gravity="center_vertical"

        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@id/ll_cb_all"
        app:layout_constraintTop_toBottomOf="@id/tv_term_sub_title">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_privacy"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/selector_checkbox"
            android:button="@null"
            android:clickable="false" />

        <TextView
            style="@style/ibm_plex_h1"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/term_privacy_desc"
            android:textColor="@color/gray_1c" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cb_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:gravity="center_vertical"

        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_cb_privacy">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_all"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/selector_checkbox"
            android:button="@null"
            android:clickable="false" />

        <TextView
            style="@style/ibm_plex_h1"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/term_all"
            android:textColor="@color/gray_1c" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@color/gray_e1"
        app:layout_constraintBottom_toTopOf="@id/btn_start"
        app:layout_constraintTop_toBottomOf="@id/ll_cb_all" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        style="@style/ibm_plex_h1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"

        android:alpha="0.6"
        android:background="@drawable/shape_radius_8"
        android:backgroundTint="@color/primary"

        android:gravity="center"
        android:text="@string/term_start_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toBottomOf="@id/divider" />
</androidx.constraintlayout.widget.ConstraintLayout>