<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_hour_1"
        style="@style/ibm_plex_t3"
        android:layout_width="36dp"

        android:layout_height="44dp"
        android:layout_marginEnd="4dp"
        android:background="@color/gray_e1"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_hour_2"

        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2" />

    <TextView
        android:id="@+id/tv_hour_2"
        style="@style/ibm_plex_t3"
        android:layout_width="36dp"

        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray_e1"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@id/tv_minute_1"
        app:layout_constraintStart_toEndOf="@id/tv_hour_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="3" />

    <TextView
        android:id="@+id/tv_minute_1"
        style="@style/ibm_plex_t3"
        android:layout_width="36dp"

        android:layout_height="44dp"
        android:layout_marginEnd="4dp"
        android:background="@color/gray_e1"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@id/tv_minute_2"
        app:layout_constraintStart_toEndOf="@id/tv_hour_2"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="5" />

    <TextView
        android:id="@+id/tv_minute_2"
        style="@style/ibm_plex_t3"
        android:layout_width="36dp"

        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray_e1"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@id/tv_second_1"
        app:layout_constraintStart_toEndOf="@id/tv_minute_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="5" />

    <TextView
        android:id="@+id/tv_second_1"
        style="@style/ibm_plex_t3"
        android:layout_width="36dp"

        android:layout_height="44dp"
        android:layout_marginEnd="4dp"
        android:background="@color/gray_e1"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@id/tv_second_2"
        app:layout_constraintStart_toEndOf="@id/tv_minute_2"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/tv_second_2"
        style="@style/ibm_plex_t3"
        android:layout_width="36dp"

        android:layout_height="44dp"
        android:background="@color/gray_e1"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_second_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0" />

    <TextView
        style="@style/ibm_plex_l2"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/time_hour"
        android:textColor="@color/primary"

        app:layout_constraintEnd_toEndOf="@id/tv_hour_2"
        app:layout_constraintStart_toStartOf="@id/tv_hour_1"
        app:layout_constraintTop_toBottomOf="@id/tv_hour_1" />

    <TextView
        style="@style/ibm_plex_l2"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/time_minute"
        android:textColor="@color/primary"

        app:layout_constraintEnd_toEndOf="@id/tv_minute_2"
        app:layout_constraintStart_toStartOf="@id/tv_minute_1"
        app:layout_constraintTop_toBottomOf="@id/tv_minute_1" />

    <TextView
        style="@style/ibm_plex_l2"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/time_second"
        android:textColor="@color/primary"

        app:layout_constraintEnd_toEndOf="@id/tv_second_2"
        app:layout_constraintStart_toStartOf="@id/tv_second_1"
        app:layout_constraintTop_toBottomOf="@id/tv_second_1" />

</androidx.constraintlayout.widget.ConstraintLayout>